lanecwe-Prod/src/objects/ClientUsageInfo__c.object
<CustomObject>
    <description>This Object Holds Client Usage Information which is fed from TESLA to support reporting requirement - Created by Jayanth Palakshiah</description>
    <fields>
        <fullName>Active_Billable__c</fullName>
        <inlineHelpText>Total Active Billable Licenses</inlineHelpText>
        <label>Active Billable</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Trial__c</fullName>
        <inlineHelpText>License Count of Active Trials</inlineHelpText>
        <label>Active Trial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AsOFTHISYEAR__c</fullName>
        <description>IF( 
YEAR(AsofMonthDate__c) = YEAR(TODAY()), &quot;THIS YEAR&quot;, &quot;NOT THIS YEAR&quot; 
)</description>
        <label>AsOFTHISYEAR</label>
        <picklist>
            <picklistValues>
                <fullName>THIS YEAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOT THIS YEAR</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AsofMonthDate__c</fullName>
        <label>AsofMonthDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calls__c</fullName>
        <label>Meetings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancelled_Billable__c</fullName>
        <label>Cancelled Billable</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClientUsageId__c</fullName>
        <label>ClientUsageId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Clients__c</fullName>
        <label>Hosts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompanyID__c</fullName>
        <label>CompanyID</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipName>ClientUsageInfos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Data_Loader_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Just a simple flag to toggle on or off to fire triggers and/or workflows on the object. Setting this field should have no other impact.</description>
        <inlineHelpText>Just a simple flag to toggle on or off to fire triggers and/or workflows on the object. Setting this field should have no other impact.</inlineHelpText>
        <label>Data Loader Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expired_Trial__c</fullName>
        <inlineHelpText>Total Expired Trial licenses</inlineHelpText>
        <label>Expired Trial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hosts_Last_Month__c</fullName>
        <description>FORMULA FIELD: The number of hosts used last month</description>
        <formula>IF( MONTH( AsofMonthDate__c ) = MONTH(TODAY()) - 1 ,  Clients__c  , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>FORMULA FIELD: The number of hosts used last month</inlineHelpText>
        <label>Hosts Last Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hosts_MTD__c</fullName>
        <description>FORMULA FIELD: The number of hosts used in the current month.</description>
        <formula>IF( MONTH ( AsofMonthDate__c ) = MONTH(TODAY()) ,  Clients__c  , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>FORMULA FIELD: The number of hosts used in the current month.</inlineHelpText>
        <label>Hosts MTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mins_Last_Month__c</fullName>
        <description>FORMULA FIELD:  The number of minutes used last month</description>
        <formula>IF( MONTH(  AsofMonthDate__c ) = MONTH(TODAY()) - 1 ,  Mins__c  , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>FORMULA FIELD:  The number of minutes used last month</inlineHelpText>
        <label>Mins Last Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mins_MTD__c</fullName>
        <description>FORMULA FIELD:  The number of minutes used in the current month.</description>
        <formula>IF( MONTH (  AsofMonthDate__c  ) = MONTH(TODAY()) ,  Mins__c , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>FORMULA FIELD:  The number of minutes used in the current month.</inlineHelpText>
        <label>Mins MTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mins__c</fullName>
        <label>Mins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_A_Licenses__c</fullName>
        <inlineHelpText>Total N/A Licenses.  N/A were licenses setup prior to having categories assigned to them</inlineHelpText>
        <label>N/A Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parts__c</fullName>
        <label>Parts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <label>Product Family</label>
        <picklist>
            <picklistValues>
                <fullName>Web: iMeet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web: GlobalMeet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operator Assisted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web: 3rd Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web: 3rd Party Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ClientUsage</relationshipLabel>
        <relationshipName>Client_Usage_Infos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SFDC_Product_Family__c</fullName>
        <formula>IF( 
AND(
ISPICKVAL(UsageType__c, &quot;Revenue&quot;),
OR( 
ISPICKVAL(ProductType__c, &quot;Ancillary Value Added-Automate&quot;), 
ISPICKVAL(ProductType__c, &quot;Audio Bundle&quot;), 
ISPICKVAL(ProductType__c, &quot;Audio Bundle - Prepaid&quot;), 
ISPICKVAL(ProductType__c, &quot;Microsoft Lync Audio&quot;), 
ISPICKVAL(ProductType__c, &quot;RC Domestic&quot;), 
ISPICKVAL(ProductType__c, &quot;RC International&quot;), 
ISPICKVAL(ProductType__c, &quot;Ready Conference Flat Rate&quot;), 
ISPICKVAL(ProductType__c, &quot;Ready Conference Plus&quot;), 
ISPICKVAL(ProductType__c, &quot;Schedule Ready Conference&quot;), 
ISPICKVAL(ProductType__c, &quot;Soundbyte - Automated&quot;) 
)), &quot;Automated&quot;, 
IF( 
AND(
ISPICKVAL(UsageType__c, &quot;Revenue&quot;),
OR( 
ISPICKVAL(ProductType__c, &quot;Ancillary Other&quot;), 
ISPICKVAL(ProductType__c, &quot;Ancillary Value Added-OpAssist&quot;), 
ISPICKVAL(ProductType__c, &quot;Auditorium.&quot;), 
ISPICKVAL(ProductType__c, &quot;No Show Fees&quot;), 
ISPICKVAL(ProductType__c, &quot;PremiereCall Connections&quot;), 
ISPICKVAL(ProductType__c, &quot;PremiereCall Event&quot;), 
ISPICKVAL(ProductType__c, &quot;Soundbyte - Op Assisted&quot;), 
ISPICKVAL(ProductType__c, &quot;Transcription&quot;), 
ISPICKVAL(ProductType__c, &quot;Web Event Services&quot;) 
)), &quot;Operator Assisted&quot;, 
IF( 
AND(
ISPICKVAL(UsageType__c, &quot;Revenue&quot;),
ISPICKVAL(ProductType__c, &quot;ON24 Webcasting&quot;)
), &quot;Web&quot;, 
IF( 
AND(
ISPICKVAL(UsageType__c, &quot;Revenue&quot;),
OR( 
ISPICKVAL(ProductType__c, &quot;Adobe Connect Pro - Minute&quot;), 
ISPICKVAL(ProductType__c, &quot;Adobe Connect Pro - Seat&quot;), 
ISPICKVAL(ProductType__c, &quot;Microsoft Live Meeting - Minut&quot;), 
ISPICKVAL(ProductType__c, &quot;Microsoft Live Meeting - USL&quot;), 
ISPICKVAL(ProductType__c, &quot;MicroSoftLiveMeeting Ancillary&quot;), 
ISPICKVAL(ProductType__c, &quot;V-Cube Audio&quot;), 
ISPICKVAL(ProductType__c, &quot;V-Cube H/W Resale&quot;), 
ISPICKVAL(ProductType__c, &quot;V-Cube Resale&quot;), 
ISPICKVAL(ProductType__c, &quot;V-Cube Support&quot;), 
ISPICKVAL(ProductType__c, &quot;WebEx - Minute&quot;), 
ISPICKVAL(ProductType__c, &quot;WebEx - Seat&quot;), 
ISPICKVAL(ProductType__c, &quot;WebEx ancillary&quot;) 
)), &quot;Web: 3rd Party&quot;, 
IF( 
ISPICKVAL(ProductType__c, &quot;Brainshark&quot;), &quot;Web: 3rd Party Other&quot;, 
IF( 
AND(
ISPICKVAL(UsageType__c, &quot;Revenue&quot;),
OR( 
ISPICKVAL(ProductType__c, &quot;Global Meet Web - Prepaid&quot;), 
ISPICKVAL(ProductType__c, &quot;GlobalMeet OnNet&quot;), 
ISPICKVAL(ProductType__c, &quot;GlobalMeet Web&quot;), 
ISPICKVAL(ProductType__c, &quot;Netspoke - Minute&quot;) 
)), &quot;Web: Globalmeet&quot;, 
IF( 
AND(
ISPICKVAL(UsageType__c, &quot;Revenue&quot;),
OR( 
ISPICKVAL(ProductType__c, &quot;iMeet - Prepaid&quot;), 
ISPICKVAL(ProductType__c, &quot;iMeet Web&quot;) 
)), &quot;Web: iMeet&quot;, &quot;No Product Mapping&quot; 
)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Value__c</fullName>
        <formula>TEXT(AsofMonthDate__c) +  SFDC_Product_Family__c +   CompanyID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sort Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Licenses_Non_N_A__c</fullName>
        <inlineHelpText>Total license count of all non- N/A licenses</inlineHelpText>
        <label>Total Licenses (Non N/A)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UsageType__c</fullName>
        <description>Will relabel this to be called Usage Type or something similar as we build out future integrations.</description>
        <label>Usage Type</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly Licenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Licenses</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Client Usage Info</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CompanyID__c</columns>
        <columns>ProductType__c</columns>
        <columns>AsofMonthDate__c</columns>
        <columns>Clients__c</columns>
        <columns>Mins__c</columns>
        <columns>Calls__c</columns>
        <columns>Parts__c</columns>
        <columns>ClientUsageId__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LastMonth</fullName>
        <columns>NAME</columns>
        <columns>CompanyID__c</columns>
        <columns>ProductType__c</columns>
        <columns>AsofMonthDate__c</columns>
        <columns>Clients__c</columns>
        <columns>Mins__c</columns>
        <columns>Calls__c</columns>
        <columns>Parts__c</columns>
        <columns>ClientUsageId__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AsofMonthDate__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>Last Month</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MTD</fullName>
        <columns>NAME</columns>
        <columns>CompanyID__c</columns>
        <columns>ProductType__c</columns>
        <columns>AsofMonthDate__c</columns>
        <columns>Clients__c</columns>
        <columns>Mins__c</columns>
        <columns>Calls__c</columns>
        <columns>Parts__c</columns>
        <columns>ClientUsageId__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AsofMonthDate__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>MTD</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>This_Month_Daily</fullName>
        <columns>NAME</columns>
        <columns>CompanyID__c</columns>
        <columns>ProductType__c</columns>
        <columns>AsofMonthDate__c</columns>
        <columns>Clients__c</columns>
        <columns>Mins__c</columns>
        <columns>Calls__c</columns>
        <columns>Parts__c</columns>
        <columns>ClientUsageId__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AsofMonthDate__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>UsageType__c</field>
            <operation>equals</operation>
            <value>Daily</value>
        </filters>
        <label>This Month - Daily</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>This_Month_MTD</fullName>
        <columns>NAME</columns>
        <columns>CompanyID__c</columns>
        <columns>ProductType__c</columns>
        <columns>AsofMonthDate__c</columns>
        <columns>Clients__c</columns>
        <columns>Mins__c</columns>
        <columns>Calls__c</columns>
        <columns>Parts__c</columns>
        <columns>ClientUsageId__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UsageType__c</field>
            <operation>equals</operation>
            <value>Licenses</value>
        </filters>
        <label>This Month - MTD</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>C-{0}</displayFormat>
        <label>ClientUsageInfo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Usage Infos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>